tests/language_modules/15_qualified_names_calls/valid/current_module_qualified_procedure_call.vf
module Qualified.ProcedureCalls

procedure ensure_positive(amount: Integer)
is
    check amount > 0
end ensure_positive

procedure main()
is
    call Qualified.ProcedureCalls.ensure_positive(1)
end main

end Qualified.ProcedureCalls