tests/language_modules/15_qualified_names_calls/invalid_semantics/qualified_function_used_as_call_statement.vf
module Qualified.FunctionAsCall

function read() returns Integer
is
    return 1
end read

procedure main()
is
    call Qualified.FunctionAsCall.read()
end main

end Qualified.FunctionAsCall